2011-07-26  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.58.

2011-07-25  Tim Waugh  <twaugh@redhat.com>

	* MANIFEST.in: New file.
	* Makefile: Use sdist for creating tarballs.

	* setup.py: Added more information ready for PyPI.

2011-07-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c: Applied patch from Gowtham Narisipalli to
	add adminExportSamba method.

2011-06-27  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Link against libiconv on darwin (trac #15).

	* cupsppd.c: Fixed feature test for getline() (trac #15).

2011-06-16  Tim Waugh  <twaugh@redhat.com>

	* postscriptdriver.prov: Increase timeout for dynamic driver
	listing.

2011-06-09  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.57.

	* postscriptdriver.prov: Get RPM_BUILD_ROOT from environment
	if not provided on command line (bug #712027).

2011-06-02  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.56.

2011-05-24  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPPD3): Only provide this
	binding for CUPS >= 1.4.

	* cupsmodule.c (cups_setPasswordCB): Fixed build against
	CUPS < 1.4.

2011-05-23  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (do_password_callback): Fixed typo preventing
	build against CUPS < 1.4.

2011-03-20  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.55.

2011-02-24  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): IPP orientation and quality
	constants.

	* cupsconnection.c (PyObject_from_attr_value): Support for
	IPP_TAG_RESOLUTION.

	* cupsmodule.c (initcups): IPP_RES_PER_CM and IPP_RES_PER_INCH.

2011-02-23  Tim Waugh  <twaugh@redhat.com>

	* setup.py: Version 1.9.54.

2011-02-23  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_begin_allow_threads): Avoid
	'unused variable' warning.

2011-02-23  Tim Waugh  <twaugh@redhat.com>

	* psdriver.attr, postscriptdriver.prov: RPM hooks for tagging
	packages with Device IDs of models supported by drivers.