@@ -1,3 +1,10 @@
+2011-10-03  Tim Waugh  <twaugh@redhat.com>
+
+	* cupsmodule.c (do_password_callback), cupsconnection.c
+	(password_callback): Return NULL instead of the empty string
+	when handling an exception or when the callback returned an
+	empty string, and handle the callback returning None.
+
 2011-07-26  Tim Waugh  <twaugh@redhat.com>
 
 	* setup.py: Version 1.9.58.
